# msmemscope

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE.md  README.md  README_EN.md  build.py  requirements.txt
csrc/: CMakeLists.txt  dummy.cpp  main.cpp
csrc/analysis/: analyzer.cpp  analyzer.h  analyzer_base.h  analyzer_factory.cpp  analyzer_factory.h  constant.h  data.h  data_handler.cpp  data_handler.h  decompose_analyzer.cpp  decompose_analyzer.h  device_manager.cpp  device_manager.h  dump.cpp  dump.h  dump_record.cpp  dump_record.h  event.cpp  event.h  event_dispatcher.cpp  event_dispatcher.h  hal_analyzer.cpp  hal_analyzer.h  inefficient_analyzer.cpp  inefficient_analyzer.h  memory_compare.cpp  memory_compare.h  memory_state_manager.cpp  memory_state_manager.h  memory_state_record.cpp  memory_state_record.h  module_info.h  mstx_analyzer.cpp  mstx_analyzer.h  py_step_manager.cpp  py_step_manager.h  python_trace_event.h  state.h  state_manager.h  stepinner_analyzer.cpp  (+5 more)
csrc/event_trace/: CMakeLists.txt  ascend_hal.h  ascend_hal_stub.cpp  describe_trace.cpp  describe_trace.h  event_report.cpp  event_report.h  global_handle.h  handle_mapping.h  oom_handler.cpp  oom_handler.h  op_handler.cpp  op_handler.h  python_trace.cpp  python_trace.h  vallina_symbol.cpp  vallina_symbol.h
csrc/event_trace/atb_hooks/: CMakeLists.txt  atb_abi_0_hooks.cpp  atb_abi_1_hooks.cpp  atb_hooks.cpp  atb_hooks.h  atb_stub.h  enum2string.cpp  enum2string.h  mki_stub.h
csrc/event_trace/atb_op_watch/: atb_op_excute_watch.cpp  atb_op_excute_watch.h  atb_tensor_dump.cpp  atb_tensor_dump.h
csrc/event_trace/hal_hooks/: CMakeLists.txt  hal_hooks.cpp  hal_hooks.h
csrc/event_trace/host_memory_hooks/: CMakeLists.txt  host_memory_hooks.cpp
csrc/event_trace/kernel_hooks/: CMakeLists.txt  acl_hooks.cpp  acl_hooks.h  driver_prof_api.cpp  driver_prof_api.h  kernel_event_trace.cpp  kernel_event_trace.h  runtime_hooks.cpp  runtime_hooks.h  runtime_prof_api.cpp  runtime_prof_api.h  stars_common.cpp  stars_common.h
csrc/event_trace/memory_pool_trace/: CMakeLists.txt  atb_memory_pool_trace.cpp  atb_memory_pool_trace.h  memory_pool_trace_base.h  memory_pool_trace_manager.cpp  memory_pool_trace_manager.h  mindspore_memory_pool_trace.cpp  mindspore_memory_pool_trace.h  pta_caching_pool_trace.cpp  pta_caching_pool_trace.h  pta_memory_pool_trace.cpp  pta_memory_pool_trace.h  pta_workspace_pool_trace.cpp  pta_workspace_pool_trace.h
csrc/event_trace/memory_watch/: memory_watch.cpp  memory_watch.h  tensor_dumper.cpp  tensor_dumper.h  tensor_monitor.cpp  tensor_monitor.h
csrc/event_trace/mstx_hooks/: CMakeLists.txt  aten_manager.cpp  aten_manager.h  mstx_info.h  mstx_inject.cpp  mstx_inject.h  mstx_manager.cpp  mstx_manager.h  op_handler.cpp  op_handler.h
csrc/event_trace/op_watch/: CMakeLists.txt  op_excute_watch.cpp  op_excute_watch.h  tensor_dumper.cpp  tensor_dumper.h  tensor_monitor.cpp  tensor_monitor.h
csrc/event_trace/torch_npu_trace/: CMakeLists.txt  torch_npu_trace.cpp  torch_npu_trace.h
csrc/event_trace/trace_manager/: event_trace_manager.cpp  event_trace_manager.h
csrc/framework/: CMakeLists.txt  cli_logo.cpp  cli_logo.h  client_parse.cpp  client_parser.cpp  client_parser.h  client_process.cpp  client_process.h  command.cpp  command.h  communication_proxy_client.h  communication_proxy_server.h  config_info.h  domain_socket_client.cpp  domain_socket_client.h  domain_socket_server.cpp  domain_socket_server.h  process.cpp  process.h  protocol.cpp  protocol.h  record_info.h  serializer.h  server_process.cpp  server_process.h  shared_memory_client.cpp  shared_memory_client.h  shared_memory_server.cpp  shared_memory_server.h
csrc/framework/utility/: log.cpp  log.h  path.cpp  path.h  ustring.h
csrc/python_itf/: CMakeLists.txt  describerobject.cpp  describerobject.h  msleaksmodule.cpp  recordfuncobject.cpp  recordfuncobject.h  report_tensor.cpp  report_tensor.h  tracerobject.cpp  tracerobject.h  watcherobject.cpp  watcherobject.h
csrc/utility/: CMakeLists.txt  bit_field.h  calculate_data_check_sum.cpp  calculate_data_check_sum.h  calculate_md5.cpp  calculate_md5.h  call_stack.cpp  call_stack.h  comm_def.h  cpython.cpp  cpython.h  file.cpp  file.h  file_write_manager.h  json_manager.cpp  json_manager.h  lock_free_queue.cpp  lock_free_queue.h  log.cpp  log.h  path.cpp  path.h  sqlite_loader.cpp  sqlite_loader.h  string_validator.cpp  string_validator.h  umask_guard.h  ustring.cpp  ustring.h  utils.cpp  utils.h
opensource/sqlite3/: CMakeLists.txt
platform/securec-build/: CMakeLists.txt
test/: CMakeLists.txt  test.cpp
test/analysis/: test_analyzer.cpp  test_analyzer_factory.cpp  test_data_handler.cpp  test_decompose_analyzer.cpp  test_device_manager.cpp  test_dump.cpp  test_hal_analyzer.cpp  test_inefficient_analyzer.cpp  test_memory_compare.cpp  test_memory_state_record.cpp  test_mstx_analyzer.cpp  test_process_event.cpp  test_pystep_manager.cpp  test_record_to_event.cpp  test_stepinner_analyzer.cpp  test_stepinter_analyzer.cpp  test_trace_record.cpp
test/event_trace/: CMakeLists.txt  test_ascend_hal_stub.cpp  test_atb_op_excute_watch.cpp  test_aten_manager.cpp  test_describe_trace.cpp  test_event_report.cpp  test_hal_hooks.cpp  test_kernel_excute_trace.cpp  test_kernel_hooks.cpp  test_mem_pool_trace.cpp  test_mstx_inject.cpp  test_mstx_manager.cpp  test_op_excute_watch.cpp  test_op_handler.cpp  test_python_trace.cpp  test_tensor_dumper.cpp  test_tensor_monitor.cpp  test_torch_npu_trace.cpp  test_vallina_symbol.cpp
test/framework/: CMakeLists.txt  protocol_test.cpp  test_client_parser.cpp  test_command.cpp  test_process.cpp  test_protocol.cpp
test/framework/utility/: test_path.cpp
test/fuzz_test/: CMakeLists.txt  fuzz.h  fuzz_main.cpp  fuzz_sample.cpp
test/smoke/: README.md  run_st.py  run_st.sh
test/smoke/msmemscope/: README.md
test/smoke/src/test_suit/: base_test.py  cli_base_test.py  (+10 more)
test/utility/: CMakeLists.txt  test_call_stack.cpp  test_cpython.cpp  test_file.cpp  test_json_manager.cpp  test_log.cpp  test_path.cpp  test_ustring.cpp  test_utils.cpp
(+153 files in other folders)
